force-app/main/default/objects/UniversityCareer__c/UniversityCareer__c.object-meta.xml
<CustomObject>
    <pluralLabel>University Careers</pluralLabel>
    <fullName>UniversityCareer__c</fullName>
    <description>It represents a specific university offering a specific degree program.</description>
    <nameField>
        <displayFormat>UC-{000000}</displayFormat>
        <label>University Career Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <label>UniversityCareer</label>
</CustomObject>