force-app/main/default/objects/UniversityCareer__c/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <label>Career</label>
    <referenceTo>Career__c</referenceTo>
    <relationshipLabel>University Careers</relationshipLabel>
    <relationshipName>UniversityCareers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>