force-app/main/default/objects/UniversityCareer__c/fields/DurationYears__c.field-meta.xml
<CustomField>
    <fullName>DurationYears__c</fullName>
    <label>Duration Years</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>