force-app/main/default/objects/UniversityCareer__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <referenceTo>University__c</referenceTo>
    <relationshipLabel>University Careers</relationshipLabel>
    <relationshipName>UniversityCareers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>