force-app/main/default/objects/UniversityCareer__c/fields/UniversityCareerKey__c.field-meta.xml
<CustomField>
    <fullName>UniversityCareerKey__c</fullName>
    <label>University Career Key</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>