force-app/main/default/objects/UniversityCareer__c/validationRules/University_Career_Duration_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>University_Career_Duration_Valid</fullName>
    <active>true</active>
    <description>
        Validates the duration of a university career.
    </description>
    <errorConditionFormula>
        OR(
            DurationYears__c &lt; 4,
            DurationYears__c > 9  
        )
    </errorConditionFormula>
    <errorMessage>
        The duration of a university career must be between 4 and 9 years.
    </errorMessage>
</ValidationRule>