force-app/main/default/objects/UniversityCareer__c/validationRules/UniversityCareer_Active_Start_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>UniversityCareer_Active_Start_Required</fullName>
    <active>true</active>
    <description>
        Validates that a start date is required when a university career is active.
    </description>
    <errorConditionFormula>
        AND(
            Active__c,
            ISBLANK(StartDate__c)
        )
    </errorConditionFormula>
    <errorMessage>
        A start date is required when a university career is active.
    </errorMessage>
</ValidationRule>