force-app/main/default/objects/UniversityCareer__c/listViews/All_UniversityCareers.listView-meta.xml
<ListView>
    <fullName>All_UniversityCareers</fullName>
    <columns>NAME</columns>
    <columns>Career__c</columns>
    <columns>DurationYears__c</columns>
    <columns>StartDate__c</columns>
    <columns>University__c</columns>
    <columns>UniversityCareerKey__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All University Careers</label>
</ListView>